--- a/index.html
+++ b/index.html
@@ -1,94 +1,213 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Magnate Property Group - Unlocking value across residential and commercial real estate.">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Magnate Property Group</title>
-  <link rel="stylesheet" href="style.css">
+  <meta name="description" content="Magnate Property Group — data-driven property management, valuations and advisory services in Pretoria." />
+  <meta name="theme-color" content="#0b2b3a" />
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="Magnate Property Group" />
+  <meta property="og:description" content="Data-driven property management, valuations and advisory services in Pretoria." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://ManLikeM0.github.io/Magnate-Property-Group/" />
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script> </head> <body>
-  <header>
-    <nav class="navbar">
-      <div class="logo">MAGNATE PROPERTY GROUP</div>
-      <ul class="nav-links">
-        <li><a href="#services">Services</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#tech">Tech</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <!-- Font Awesome (CDN) -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
+
+</head>
+<body>
+  <header class="site-header" role="banner">
+    <div class="container header-inner">
+      <a class="brand" href="/">
+        <span class="brand-logo" aria-hidden="true">MPG</span>
+        <span class="brand-text">Magnate Property Group</span>
+      </a>
+
+      <button id="nav-toggle" class="nav-toggle" aria-controls="primary-nav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="sr-only">Menu</span>
+        <i class="fa fa-bars" aria-hidden="true"></i>
+      </button>
+
+      <nav id="primary-nav" class="primary-nav" role="navigation" aria-label="Primary">
+        <ul class="nav-list">
+          <li><a href="#services">Services</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#tech">Tech</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
-  <section class="hero" id="hero">
-    <div class="hero-content">
-      <h1>Unlocking Value Across Residential and Commercial Real Estate.</h1>
-      <p>Data-driven property management, valuations, and advisory services.</p>
-      <a href="#contact" class="button">Request a Valuation</a>
-    </div>
-  </section>
+  <main>
+    <section class="hero" id="hero" role="region" aria-label="Intro">
+      <div class="container hero-content">
+        <div class="hero-copy">
+          <h1>Unlocking value across residential and commercial real estate</h1>
+          <p class="lead">Data-driven property management, valuations and advisory services founded in Pretoria — combining corporate rigour with hands-on local expertise.</p>
+          <div class="hero-cta">
+            <a href="#contact" class="btn btn-primary">Request a Valuation</a>
+            <a href="#services" class="btn btn-ghost">Our Services</a>
+          </div>
+        </div>
+        <div class="hero-image" aria-hidden="true">
+          <!-- Decorative illustration can be replaced with an SVG or image -->
+          <svg width="360" height="240" viewBox="0 0 360 240" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true">
+            <rect rx="12" width="360" height="240" fill="#0b2b3a"/>
+            <g fill="#fff" opacity="0.06">
+              <rect x="24" y="30" width="120" height="40" rx="6"/>
+              <rect x="24" y="80" width="200" height="12" rx="6"/>
+              <rect x="24" y="104" width="160" height="12" rx="6"/>
+              <rect x="24" y="130" width="80" height="80" rx="6"/>
+            </g>
+          </svg>
+        </div>
+      </div>
+    </section>
 
-  <section class="about" id="about">
-    <h2>Redefining Value in Real Estate</h2>
-    <p>Magnate Property Group is a dynamic, 100% youth-owned property consultancy based in Pretoria. We bridge the gap between complex corporate management and personal, on-the-ground care. By integrating digital tools with dedicated on-site building coordination, we deliver the efficiency of a large corporate firm with the agility of a boutique agency.</p>
-  </section>
+    <section id="about" class="about container" aria-labelledby="about-heading">
+      <h2 id="about-heading">Redefining value in real estate</h2>
+      <p>Magnate Property Group is a dynamic, 100% youth-owned property consultancy based in Pretoria. We bridge the gap between complex corporate management and personal, on-the-ground care by combining data, operational excellence and local relationships to maximise income and reduce operating risk.</p>
+    </section>
 
-  <section class="services" id="services">
-    <h2>Our Services</h2>
-    <div class="service-cards">
-      <div class="card">
-        <i class="fas fa-tools"></i>
-        <h3>Preventative Maintenance</h3>
-        <p>Proactive asset preservation and vendor management.</p>
-      </div>
-      <div class="card">
-        <i class="fas fa-file-contract"></i>
-        <h3>Lease Management</h3>
-        <p>Legal drafting, TPN vetting, and renewals.</p>
-      </div>
-      <div class="card">
-        <i class="fas fa-bullhorn"></i>
-        <h3>Property Marketing</h3>
-        <p>Vacancy reduction via Property24 and digital listings.</p>
-      </div>
-      <div class="card">
-        <i class="fas fa-building"></i>
-        <h3>Facilities Management</h3>
-        <p>On-site coordination and compliance checks.</p>
-      </div>
-      <div class="card">
-        <i class="fas fa-clipboard-list"></i>
-        <h3>Property Management</h3>
-        <p>Financial administration and tenant relations.</p>
-      </div>
-      <div class="card">
-        <i class="fas fa-chart-line"></i>
-        <h3>Valuation Advisory</h3>
-        <p>Municipal appeals and income optimization.</p>
-      </div>
-    </div>
-  </section>
+    <section id="services" class="services" aria-labelledby="services-heading">
+      <div class="container">
+        <h2 id="services-heading">Our Services</h2>
+        <div class="service-grid">
+          <article class="card" aria-labelledby="s1">
+            <div class="card-icon"><i class="fa-solid fa-tools"></i></div>
+            <h3 id="s1">Preventative Maintenance</h3>
+            <p>Proactive asset preservation, planned maintenance and trusted vendor management to extend asset life and reduce emergency spend.</p>
+          </article>
 
-  <section class="tech" id="tech">
-    <h2>Powered by Best-in-Class Technology</h2>
-    <div class="tech-logos">
-      <div class="tech-logo">TPN</div>
-      <div class="tech-logo">WeconnectU</div>
-      <div class="tech-logo">RedRabbit</div>
-      <div class="tech-logo">Property24</div>
-    </div>
-  </section>
+          <article class="card" aria-labelledby="s2">
+            <div class="card-icon"><i class="fa-solid fa-file-contract"></i></div>
+            <h3 id="s2">Lease Management</h3>
+            <p>Full lease lifecycle support including drafting, TPN vetting and renewals to protect your income stream.</p>
+          </article>
 
-  <footer class="footer" id="contact">
-    <div class="contact-info">
-      <p>Phone: +27 (79) 369-1229</p>
-      <p>Email: info@magnateproperty.co.za</p>
-      <p>Location: Pretoria, Gauteng</p>
-    </div>
-    <div class="copyright">
-      <p>&copy; 2025 Magnate Property Group (Pty) Ltd.</p>
+          <article class="card" aria-labelledby="s3">
+            <div class="card-icon"><i class="fa-solid fa-bullhorn"></i></div>
+            <h3 id="s3">Property Marketing</h3>
+            <p>Data-led marketing and digital listings to reduce vacancy and accelerate lettings across Property24 and other channels.</p>
+          </article>
+
+          <article class="card" aria-labelledby="s4">
+            <div class="card-icon"><i class="fa-solid fa-building"></i></div>
+            <h3 id="s4">Facilities Management</h3>
+            <p>On-site coordination, compliance checks and responsive operations to keep assets functioning and tenants satisfied.</p>
+          </article>
+
+          <article class="card" aria-labelledby="s5">
+            <div class="card-icon"><i class="fa-solid fa-clipboard-list"></i></div>
+            <h3 id="s5">Property Management</h3>
+            <p>Financial administration, reporting and tenant relations focused on maximizing net operating income.</p>
+          </article>
+
+          <article class="card" aria-labelledby="s6">
+            <div class="card-icon"><i class="fa-solid fa-chart-line"></i></div>
+            <h3 id="s6">Valuation Advisory</h3>
+            <p>Municipal appeals, valuation reviews and income optimisation strategies to protect and grow property value.</p>
+          </article>
+        </div>
+      </div>
+    </section>
+
+    <section id="tech" class="tech container" aria-labelledby="tech-heading">
+      <h2 id="tech-heading">Powered by best-in-class technology</h2>
+      <div class="tech-logos">
+        <div class="tech-item">TPN</div>
+        <div class="tech-item">WeconnectU</div>
+        <div class="tech-item">RedRabbit</div>
+        <div class="tech-item">Property24</div>
+      </div>
+    </section>
+
+    <section id="contact" class="contact container" aria-labelledby="contact-heading">
+      <h2 id="contact-heading">Contact Us</h2>
+      <div class="contact-grid">
+        <div class="contact-details">
+          <p><strong>Phone:</strong> <a href="tel:+27793691229">+27 (79) 369-1229</a></p>
+          <p><strong>Email:</strong> <a href="mailto:info@magnateproperty.co.za">info@magnateproperty.co.za</a></p>
+          <p><strong>Location:</strong> Pretoria, Gauteng</p>
+          <p>For valuation requests, describe the asset (type, suburb, estimated size) and we'll respond within one business day.</p>
+        </div>
+
+        <form class="contact-form" action="mailto:info@magnateproperty.co.za" method="post" enctype="text/plain" aria-label="Contact form">
+          <label for="name">Name</label>
+          <input id="name" name="name" type="text" required>
+
+          <label for="email">Email</label>
+          <input id="email" name="email" type="email" required>
+
+          <label for="message">Message</label>
+          <textarea id="message" name="message" rows="5" placeholder="Briefly describe the property or enquiry" required></textarea>
+
+          <div class="form-actions">
+            <button type="submit" class="btn btn-primary">Send</button>
+            <button type="reset" class="btn btn-ghost">Reset</button>
+          </div>
+        </form>
+      </div>
+    </section>
+  </main>
+
+  <footer class="site-footer" role="contentinfo">
+    <div class="container footer-inner">
+      <div class="footer-left">
+        <p>&copy; <span id="year"></span> Magnate Property Group (Pty) Ltd. All rights reserved.</p>
+      </div>
+      <div class="footer-right">
+        <nav aria-label="Footer">
+          <ul class="footer-links">
+            <li><a href="#services">Services</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
     </div>
   </footer>
+
+  <script>
+    // Small interactive bits: nav toggle and smooth scroll
+    (function() {
+      const navToggle = document.getElementById('nav-toggle');
+      const nav = document.getElementById('primary-nav');
+
+      navToggle.addEventListener('click', function() {
+        const expanded = this.getAttribute('aria-expanded') === 'true' || false;
+        this.setAttribute('aria-expanded', !expanded);
+        nav.classList.toggle('open');
+      });
+
+      // Close nav on link click (mobile)
+      document.querySelectorAll('.nav-list a').forEach(a => {
+        a.addEventListener('click', () => {
+          nav.classList.remove('open');
+          navToggle.setAttribute('aria-expanded', 'false');
+        });
+      });
+
+      // Smooth scroll for in-page links
+      document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+        anchor.addEventListener('click', function (e) {
+          const target = document.querySelector(this.getAttribute('href'));
+          if (target) {
+            e.preventDefault();
+            target.scrollIntoView({ behavior: 'smooth', block: 'start' });
+          }
+        });
+      });
+
+      // Set current year
+      document.getElementById('year').textContent = new Date().getFullYear();
+    })();
+  </script>
 </body>
 </html>
